--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+.sunny {
+  background-color: #FFCD41; }
+
+.clear {
+  background-color: #73d2de; }
+
+.night {
+  background-color: #273D53; }
+
+.cloudy-dark {
+  background-color: #999; }
+
+.cloudy-light {
+  background-color: #ccc; }
+
+.sandy {
+  background-color: #FDD387; }
+
 /* Global */
 * {
   box-sizing: border-box; }
@@ -9,16 +27,18 @@
   flex-direction: column; }
 
 .background {
-  background-color: #73d2de;
   width: 100vw;
-  height: 100vh; }
+  height: 100vh;
+  transition: background-color 0.5s; }
 
 .container {
   height: 300px;
   width: 690px; }
 
 .row {
-  display: flex; }
+  display: flex;
+  width: 600px;
+  justify-content: space-evenly; }
 
 .search-wrapper {
   padding: 50px; }
@@ -60,8 +80,8 @@
   right: 25px; }
 
 .sun {
-  width: 50px;
-  height: 50px;
+  width: 75px;
+  height: 75px;
   background: #FFCD41;
   border-radius: 50%;
   box-shadow: rgba(255, 255, 0, 0.1) 0 0 0 4px;
@@ -78,7 +98,7 @@
   width: 100%;
   color: #002266; }
   .rain .drop {
-    background: linear-gradient(#002266, #ffffff); }
+    background-color: #002266; }
   .rain .d1 {
     left: 97%;
     animation: fall .94s linear 0.69s infinite; }
@@ -127,10 +147,11 @@
 
 .drop {
   position: absolute;
+  border-radius: 50%;
   opacity: 2;
   top: 25px;
-  width: 1.5%;
-  height: 7%; }
+  width: 2%;
+  height: 12%; }
 
 @keyframes fall {
   to {
